# DesignPatternsFinal

./: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  GLFWExample.cpp  Main.cpp  QTExample.cpp  clang-tidy-wrapper.ps1  clang-tidy-wrapper.sh  readme.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
.github/workflows-null/: ci.yml
classes/: ButtonClass.cpp  CMakeLists.txt  MenuBar.cpp  TextClass.cpp  WindowClass.cpp
classes/Canvas/: CMakeLists.txt  History.tpp  TextHistory.cpp  ToolHistory.cpp
classes/File/: CMakeLists.txt  Export.cpp  FileLocation.cpp  Image.cpp  Import.cpp
classes/Input/: CMakeLists.txt  InputManager.cpp
classes/Rendering/: CMakeLists.txt  CanvasRenderer.cpp  Layer.cpp  LayerManager.cpp
classes/TextClass/: CMakeLists.txt  Font.cpp  Text.cpp  TextBox.cpp  TextManager.cpp
classes/ToolBar/: ButtonClass.cpp  CMakeLists.txt  MenuBar.cpp  SliderButton.cpp  SubMenu.cpp
classes/Tools/: BrushTool.cpp  CMakeLists.txt  EraserTool.cpp  Stroke.cpp  StrokeManager.cpp  ToolManager.cpp
cmake/: helpfulFunctions.cmake  helpfulfunctions.cmake
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
include/: Bounds.h  ButtonClass.h  CMakeLists.txt  Color.h  MenuBar.h  Renderer.h  TextClass.h  WindowClass.h
include/Canvas/: CMakeLists.txt  History.h  History.tpp  TextHistory.h  ToolHistory.h
include/File/: CMakeLists.txt  Export.h  FileLocation.h  Image.h  Import.h
include/Input/: CMakeLists.txt  InputManager.h
include/Rendering/: CMakeLists.txt  CanvasRenderer.h  Layer.h  LayerManager.h
include/Text/: CMakeLists.txt  Font.h  Text.h  TextBox.h  TextManager  TextManager.h
include/ToolBar/: ButtonClass.h  CMakeLists.txt  MenuBar.h  SliderButton.h  SubMenu.h
include/Tools/: BrushTool.h  CMakeLists.txt  EraserTool.h  Point.h  Stroke.h  StrokeManager.h  ToolManager.h
interfaces/: CMakeLists.txt
interfaces/canvas/: CMakeLists.txt  ICanvasRenderer.h  IHistoryStack.h  IRenderManager.h
interfaces/drawing/: CMakeLists.txt  IDrawingEngine.h  IDrawingTool.h  IStroke.h  IStrokeGeneratingTool.h  IStrokeManager.h  ITool.h  IToolManager.h
interfaces/file/: CMakeLists.txt  IExport.h  IFiles.h  IImage.h  IImport.h  ILoad.h  ISave.h
interfaces/text/: CMakeLists.txt  IText.h  ITextBox.h  ITextManager.h
interfaces/ui/: CMakeLists.txt  IButton.h  IInputManager.h  IInputReceiver.h  IMenu.h
test/: CMakeLists.txt  CanvasRendererTest.cpp  EraserHistoryTest.cpp  FileTests.cpp  LayerManagerTest.cpp  MenuBarTest.cpp  MockTextManager.h  StrokeManagerTest.cpp  TextHistoryTest.cpp  TextManagerTest.cpp  TextTest.cpp  ToolHistoryTest.cpp  ToolIntegrationTest.cpp  ToolManagerTest.cpp  ToolManagerTests.cpp  ToolStressTest.cpp
